# battlebit-api

./: Cargo.toml  DOCS_README.md  README.md  build-docs.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/battlebit_api/: all.html  enum.AntiCheat.html  enum.DayNight.html  enum.Error.html  enum.Gamemode.html  enum.MapSize.html  enum.Region.html  index.html  sidebar-items.js  struct.BBApi.html  struct.Clan.html  struct.Leaderboard.html  struct.Player.html  struct.ServerData.html
docs/battlebit_api/api/: struct.BBApi.html
docs/battlebit_api/endpoints/leaderboard/: struct.Clan.html  struct.Leaderboard.html  struct.Player.html
docs/battlebit_api/endpoints/servers/: struct.ServerData.html
docs/battlebit_api/enums/: enum.AntiCheat.html  enum.DayNight.html  enum.Gamemode.html  enum.MapSize.html  enum.Region.html
docs/battlebit_api/error/: enum.Error.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/src/battlebit_api/: api.rs.html  enums.rs.html  error.rs.html  lib.rs.html
examples/: serverlist.rs  serverlist_unknown.rs  top_leaderboard.rs
src/: api.rs  api_async.rs  enums.rs  error.rs  lib.rs  main.rs  structs.rs
src/endpoints/: mod.rs
src/endpoints/leaderboard/: mod.rs
src/endpoints/servers/: mod.rs
(+5 files in other folders)
