[package]
name = "battlebit-api"
version = "0.1.3"
edition = "2021"
homepage = "https://github.com/superyu1337/battlebit-api"
reposiory = "https://github.com/superyu1337/battlebit-api"
readme = "README.md"
description = "Battlebit API library"
keywords = ["api"]
license-file = "LICENSE.txt"

[dependencies]
derive-getters = "0.3.0"
derive_more = "0.99.17"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
url = "2.4.0"
