[package]
name = "battlebit-api"
version = "0.1.7"
edition = "2021"
homepage = "https://github.com/superyu1337/battlebit-api"
reposiory = "https://github.com/superyu1337/battlebit-api"
readme = "README.md"
description = "Battlebit API library"
keywords = ["api"]
license-file = "LICENSE.txt"

[dependencies]
derive-getters = "0.3.0"
derive_more = "0.99.17"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
url = "2.5.0"